--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Личный проект «Кекстаграм» от HTML Academy",
   "repository": {
     "type": "git",
-    "url": "git@github.com:htmlacademy-univer-javascript-1/2502571-kekstagram-5.git"
+    "url": "git+ssh://git@github.com/htmlacademy-univer-javascript-1/2502571-kekstagram-5.git"
   },
   "bugs": {
     "url": "https://github.com/htmlacademy-univer-javascript-1/2502571-kekstagram-5/issues"
@@ -23,5 +23,8 @@
   "engines": {
     "node": "18",
     "npm": "9"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "homepage": "https://github.com/htmlacademy-univer-javascript-1/2502571-kekstagram-5#readme"
 }
